# TYLDDB-CSharp

./: .editorconfig  LICENSE  LICENSE_CN  README.md  TTYPDB-CSharp.sln  TYLDDB-CSharp.sln
.github/workflows/: checkmarx.yml  codacy.yml  codeql.yml  codescan.yml  devskim.yml  fortify.yml  ossar.yml
CLibs/ReadFile/: CMakeLists.txt  file_reader.c  file_reader.h
CLibs/ReadFileAsmMinGW/: CMakeLists.txt  file_reader.asm  file_reader.c
ComputerInformation/: GetInfo.cs
CppLibs/ReadFile/: CMakeLists.txt  TextReader.cpp  TextReader.h
TTYPDB/: TTYPDB.cs  TTYPDB.csproj  example.ttypdb
TTYPDB/Basic/: Exception.cs
TTYPDB/Utils/: ReadFile.cs
TYLDDB/: How-To-Use.md  LICENSE  LICENSE_CN  TYLDDB.cs  TYLDDB.csproj  TYLDDB_Enum.cs  TYLDDB_Instantiation.cs  TYLDDB_Parse.cs  TYLDDB_PrivateField.cs
TYLDDB.Parser.Test/: Program.cs
TYLDDB.Test/: HighPrecisionTimer.cs  Program.cs  TYLDDB.Test.csproj  example.lddb
TYLDDB.Utils.FastCache.Test/: HighPrecisionTimer.cs  Program.cs  TYLDDB.Utils.FastCache.Test.csproj
TYLDDB.Utils.Writer.Test/: Program.cs  TYLDDB.Utils.Writer.Test.csproj
TYLDDB/Basic/: Exception.cs  TripleDictionary.cs
TYLDDB/Basic/Exception/: DatabaseException.cs  Exception.cs  FileException.cs  TripleDictionaryException.cs  TylddbException.cs  WriteException.cs
TYLDDB/Parser/: Parser.cs  V1.cs  V2.cs
TYLDDB/Utils/: Database.cs  ReadFile.cs  Reader.cs  Writer.cs
TYLDDB/Utils/Database/: IDatabase.cs  V1.cs  V2.cs
TYLDDB/Utils/DatabaseCache/: ConcurrentDictionaryCache.cs  IDatabaseCache.cs  (+2 more)
TimeRecord/: HighPrecisionTimer.cs  TimeRecord.csproj
(+32 files in other folders)
